--- a/eventos/sociais/index.html
+++ b/eventos/sociais/index.html
@@ -5,9 +5,9 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tejus - Eventos & Turismo</title>
+    <title>Tejus - Eventos &amp; Turismo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Tejus - Eventos & Turismo">
+    <meta name="description" content="Tejus - Eventos &amp; Turismo">
     <meta name="author" content="André Gabriel">
 
     <title>Modern Business - Start Bootstrap Template</title>
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../../"><img src="../../assets/img/logo.png" title="Tejus - Eventos & Turismo" height="20"></a>
+                <a class="navbar-brand" href="../../"><img src="../../assets/img/logo.png" title="Tejus - Eventos &amp; Turismo" height="20"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -123,8 +123,8 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Portfolio Item
-                    <small>Subheading</small>
+                <h1 class="page-header">Eventos Sociais <p>
+                    <small><i>"frases bonitas aqui escritas e depois" (nome do autor)</i></small>
                 </h1>
             </div>
         </div>
@@ -166,14 +166,17 @@
             </div>
 
             <div class="col-md-4">
-                <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <h3>Project Details</h3>
+                <h3>Eventos Sociais</h3>
+                <p><i>"Conferimos singularidade e excelência em cada evento"</i> <p>Garantimos um elevado nível de satisfação de forma a perpetuar a celebração, comemoração ou festividade.<p> A criatividade está presente em todos os detalhes. De forma discreta garantimos o sucesso do seu evento.
+                </p>
+                <h3>Alguns exemplos:</h3>
                 <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
+                    <li>Reuniões em Família</li>
+                    <li>Comemorações</li>
+                    <li>Casamentos</li>
+                    <li>Batizados</li>
+                    <li>Aniversários</li>
+                    <li>Entre outros eventos sociais</li>
                 </ul>
             </div>
 
@@ -184,7 +187,7 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Related Projects</h3>
+                <h3 class="page-header">Sugestões relacionadas</h3>
             </div>
 
             <div class="col-sm-3 col-xs-6">
