--- a/index.html
+++ b/index.html
@@ -49,67 +49,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">Sobre nós</a>
-                    </li>
-                    <li>
-                        <a href="services.html">Serviços</a>
-                    </li>
-                    <li>
                         <a href="contacto">Contacto</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="portfolio-1-col.html">1 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-2-col.html">2 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-3-col.html">3 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-4-col.html">4 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-item.html">Single Portfolio Item</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="blog-home-1.html">Blog Home 1</a>
-                            </li>
-                            <li>
-                                <a href="blog-home-2.html">Blog Home 2</a>
-                            </li>
-                            <li>
-                                <a href="blog-post.html">Blog Post</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="full-width.html">Full Width Page</a>
-                            </li>
-                            <li>
-                                <a href="sidebar.html">Sidebar Page</a>
-                            </li>
-                            <li>
-                                <a href="faq.html">FAQ</a>
-                            </li>
-                            <li>
-                                <a href="404.html">404</a>
-                            </li>
-                            <li>
-                                <a href="pricing.html">Pricing Table</a>
-                            </li>
-                        </ul>
                     </li>
                 </ul>
             </div>
@@ -125,31 +65,18 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('assets/img/backgrounds/banner-relvas.png');"></div>
+                <div class="fill" style="background-image:url('assets/img/backgrounds/banner-relvas.jpg');"></div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('assets/img/backgrounds/1.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Peddy Paper</h2>
-                </div>
+                <div class="fill" style="background-image:url('assets/img/backgrounds/banner ct.png');"></div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('assets/img/backgrounds/386572-original1-vzar8.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 2</h2>
-                </div>
-            </div>
-            <div class="item">
-                <div class="fill" style="background-image:url('assets/img/backgrounds/3.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 3</h2>
-                </div>
+                <div class="fill" style="background-image:url('assets/img/backgrounds/jantares-medievais.jpg');"></div>
             </div>
         </div>
 
@@ -178,18 +105,22 @@
                     <img src="assets/img/eventos/sociais.jpg" class="img-responsive">      <h4>Eventos Sociais</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Conferimos singularidade e excelência em cada Evento. Garantimos um elevado nível de satisfação de forma a perpetuar a celebração, comemoração ou festividade. A criatividade está presente em todos os detalhes, de forma discreta garantimos o sucesso do seu evento. Realizamos consigo o seu casamento, batizado ou aniversário.</p>
+                        <p>Conferimos singularidade e excelência em cada evento. Garantimos um elevado nível de satisfação de forma a perpetuar a sua celebração, comemoração ou festividade. A criatividade está presente em todos os detalhes. De forma discreta garantimos o sucesso do seu evento. Realizamos consigo o seu casamento, batizado ou aniversário.</p>
+                    </div>
+                    <div class="panel-footer">
                         <a href="eventos/sociais" class="btn btn-success">Saber +</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="panel panel-danger text-center">
+                <div class="panel panel-empresariais text-center">
                     <div class="panel-heading">
                     <img src="assets/img/eventos/empresariais.jpg" class="img-responsive">      <h4>Eventos Empresariais</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Oferecemos soluções direccionadas para o ambiente empresarial, pensadas e criadas para estimular o bom relacionamento da empresa com os  colaboradores, ou com os seus parceiros e clientes. Dispomos de uma equipa altamente qualificada e preparada para desenvolver eventos empresariais de excelência.</p>
+                        <p>Oferecemos soluções direccionadas para o ambiente empresarial, pensadas e criadas para estimular o bom relacionamento interpessoal, o relacionamento com parceiros e clientes. Dispomos de uma equipa altamente qualificada e preparada para desenvolver eventos empresariais de excelência.</p>
+                    </div>
+                    <div class="panel-footer">
                         <a href="eventos/empresariais" class="btn btn-danger">Saber +</a>
                     </div>
                 </div>
@@ -197,10 +128,12 @@
             <div class="col-md-4 col-sm-4">
                 <div class="panel panel-info text-center">
                     <div class="panel-heading">
-                    <img src="assets/img/eventos/atividades.jpg" class="img-responsive">      <h4>Atividades</h4>
+                    <img src="assets/img/eventos/atividades2.jpg" class="img-responsive">      <h4>Atividades</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Proporcionamos experiências autenticas e inesquecíveis, temos uma diversificada oferta de atividades de aventura e lazer que podes desfrutar com os teus amigos e familiares. As atividades são realizadas com equipamentos certificados e acompanhadas por monitores qualificados. Escolhe o teu próximo desafio!</p>
+                        <p>Proporcionamos experiências autênticas e inesquecíveis. Dispomos de uma diversificada oferta de atividades de aventura e lazer para desfrutar com amigos e familiares. As atividades são realizadas com equipamentos certificados e acompanhadas por monitores qualificados. Escolhe o teu próximo desafio!</p>
+                    </div>
+                    <div class="panel-footer">
                         <a href="eventos/atividades" class="btn btn-info">Saber +</a>
                     </div>
                 </div>
@@ -209,65 +142,11 @@
         </div>
         <!-- /.row -->
 
-        <!-- Portfolio Section -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">O que fazemos:</h2>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Call to Action Section -->
-        <div class="well">
-            <div class="row">
-                <div class="col-md-8">
-                    <p>Saiba de todas as novidades da TEJUS, </p>
-                </div>
-                <div class="col-md-4">
-                    <a class="btn btn-lg btn-danger btn-block" href="#">SUBSCREVER NEWSLETTER!</a>
-                </div>
-            </div>
-        </div>
-
-        <hr>
-
         <!-- Footer -->
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>&copy; 2014 Tejus - Eventos &amp; Turismo<br>Todos os direitos reservados.</p>
+                    <p>&copy; 2014 Tejus - Eventos &amp; Turismo | Todos os direitos reservados.</p>
                 </div>
             </div>
         </footer>
