--- a/eventos/atividades/index.html
+++ b/eventos/atividades/index.html
@@ -123,8 +123,8 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Portfolio Item
-                    <small>Subheading</small>
+                <h1 class="page-header">Atividades<p>
+                    <small>"frases bonitas aqui escritas e depois" (nome do autor)</small>
                 </h1>
             </div>
         </div>
@@ -166,14 +166,20 @@
             </div>
 
             <div class="col-md-4">
-                <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <h3>Project Details</h3>
+                <h3>Atividades</h3>
+                <p>Proporcionamos experiências autênticas e inesquecíveis. Dispomos de uma diversificada oferta de atividades de aventura e lazer para desfrutar com amigos e familiares. As atividades são realizadas com equipamentos certificados e acompanhadas por monitores qualificados. Escolhe o teu próximo desafio!</p>
+                <h3>Atividades que sugerimos:</h3>
                 <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
+                    <li>Paintball</li>
+                    <li>Canoagem</li>
+                    <li>Orientação</li>
+                    <li>Caminhadas</li>
+                    <li>Tiro com Arco</li>
+                    <li>Zarabatana</li>
+                    <li>Cicloturismo</li>
+                    <li>Touring Paisagístico e Cultural</li>
+                    <li>Jogos populares</li>
+                    <li>Etc.</li>
                 </ul>
             </div>
 
@@ -184,7 +190,7 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Related Projects</h3>
+                <h3 class="page-header">Atividades Relacionadas</h3>
             </div>
 
             <div class="col-sm-3 col-xs-6">
