--- a/eventos/empresariais/index.html
+++ b/eventos/empresariais/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tejus - Eventos & Turismo</title>
+    <title>Tejus - Eventos &amp; Turismo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Tejus - Eventos & Turismo">
     <meta name="author" content="André Gabriel">
@@ -123,8 +123,8 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Portfolio Item
-                    <small>Subheading</small>
+                <h1 class="page-header">Eventos Empresariais <p>
+                    <small><i>"frases bonitas aqui escritas e depois" (nome do autor)</i></small>
                 </h1>
             </div>
         </div>
@@ -166,14 +166,16 @@
             </div>
 
             <div class="col-md-4">
-                <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <h3>Project Details</h3>
+                <h3>Eventos Empresariais</h3>
+                <p>Oferecemos soluções direccionadas para o ambiente empresarial, pensadas e criadas para estimular o bom relacionamento interpessoal, o relacionamento com parceiros e clientes.<p>Dispomos de uma equipa altamente qualificada e preparada para desenvolver eventos empresariais de excelência.</p>
+                <h3>Sugestões:</h3>
                 <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
+                    <li>Team building</li>
+                    <li>Peddy paper</li>
+                    <li>Motivação</li>
+                    <li>Jogos de estratégia</li>
+                    <li>Liderança</li>
+                    <li>Atividades solidárias</li>
                 </ul>
             </div>
 
@@ -184,7 +186,7 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Related Projects</h3>
+                <h3 class="page-header">Eventos Relacionados</h3>
             </div>
 
             <div class="col-sm-3 col-xs-6">
