--- a/contacto/index.html
+++ b/contacto/index.html
@@ -67,11 +67,6 @@
                 <h1 class="page-header">Contacte-nos! <br>
                     <small>Respondemos com brevidade!</small>
                 </h1>
-                <ol class="breadcrumb">
-                    <li><a href="../">Tejus</a>
-                    </li>
-                    <li class="active">Contacto</li>
-                </ol>
             </div>
         </div>
         <!-- /.row -->
@@ -94,7 +89,7 @@
                     <div class="control-group form-group">
                         <div class="controls">
                             <label>Entidade:</label>
-                            <input type="tel" class="form-control" id="phone" required data-validation-required-message="Introduza a Empresa/Organização">
+                            <input type="text" class="form-control" id="company">
                         </div>
                     </div>
                     <div class="control-group form-group">
