--- a/contacto/index.html
+++ b/contacto/index.html
@@ -64,9 +64,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Contacte-nos! <br>
-                    <small>Respondemos com brevidade!</small>
-                </h1>
+                <h1 class="page-header">Contacte-nos!</h1>
             </div>
         </div>
         <!-- /.row -->
@@ -82,7 +80,7 @@
                     <div class="control-group form-group">
                         <div class="controls">
                             <label>* Nome:</label>
-                            <input type="text" class="form-control" id="name" required data-validation-required-message="Introuduza o seu Nome">
+                            <input type="text" class="form-control" id="name" required data-validation-required-message="Introduza o seu nome">
                             <p class="help-block"></p>
                         </div>
                     </div>
@@ -130,16 +128,12 @@
                 </p>
                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
-                        <a href="http://facebook.com/www.tejus.pt"><i class="fa fa-facebook-square fa-2x"></i></a>
+                        <a href="http://facebook.com/www.tejus.pt" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>
+                        <a href="https://twitter.com/tejus_PT" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
                     </li>
                     <br>
-                    </br>
                     <strong>Tejus - Eventos &amp; turismo</strong>
                     <br>
                     Rua Santo António n.º4
@@ -147,17 +141,15 @@
                     2150-090 Pombalinho
                     <br>
                     Golegã - Portugal
-            </div>
+                </ul>
             </div>
         </div>
-
-        <hr>
 
         <!-- Footer -->
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>&copy; 2014 Tejus - Eventos &amp; Turismo<br>Todos os direitos reservados.</p>
+                    <p>&copy; 2014 Tejus - Eventos &amp; Turismo | Todos os direitos reservados.</p>
                 </div>
             </div>
         </footer>
@@ -170,11 +162,8 @@
 
     <!-- Contact Form JavaScript -->
     <!-- Do not edit these files! In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
-<script src="../assets/js/script.js">
-
-</script>
+    <script src="../assets/js/jqBootstrapValidation.js"></script>
+    <script src="../assets/js/script.js"></script>
 
 </body>
 
