--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <p>Conferimos singularidade e excelência em cada evento. Garantimos um elevado nível de satisfação de forma a perpetuar a sua celebração, comemoração ou festividade. A criatividade está presente em todos os detalhes. De forma discreta garantimos o sucesso do seu evento. Realizamos consigo o seu casamento, batizado ou aniversário.</p>
                     </div>
                     <div class="panel-footer">
-                        <a href="eventos/sociais" class="btn btn-success">Saber +</a>
+                        <a href="contacto" class="btn btn-success">Saber +</a>
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                         <p>Oferecemos soluções direccionadas para o ambiente empresarial, pensadas e criadas para estimular o bom relacionamento interpessoal, o relacionamento com parceiros e clientes. Dispomos de uma equipa altamente qualificada e preparada para desenvolver eventos empresariais de excelência.</p>
                     </div>
                     <div class="panel-footer">
-                        <a href="eventos/empresariais" class="btn btn-danger">Saber +</a>
+                        <a href="contacto" class="btn btn-danger">Saber +</a>
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                         <p>Proporcionamos experiências autênticas e inesquecíveis. Dispomos de uma diversificada oferta de atividades de aventura e lazer para desfrutar com amigos e familiares. As atividades são realizadas com equipamentos certificados e acompanhadas por monitores qualificados. Escolhe o teu próximo desafio!</p>
                     </div>
                     <div class="panel-footer">
-                        <a href="eventos/atividades" class="btn btn-info">Saber +</a>
+                        <a href="contacto" class="btn btn-info">Saber +</a>
                     </div>
                 </div>
             </div>
